--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "MST Session Generator",
-    "description": "I'm Web Session Generator by Itxx Me Wasi",
+    "description": "I'm Web Session Generator by Itxx Me MST",
     "logo": "",
     "repository": "https://github.com/Giftedmaurice/giftedmdV2-session-generator",
     "keywords": ["@Xcelsama"],
