--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "description": "wasisession",
-    "main": "./itxxwasi.js",
+    "description": "mstsession",
+    "main": "./mudasir.js",
   "engines" : { 
     "npm" : ">=9.7.2",
     "node" : ">=20.0.0"
     },
     "scripts": {
-    "start": "node itxxwasi.js"
+    "start": "node mudasir.js"
   },
-  "author": "WasiTech",
+  "author": "MudasirTech",
   "license": "GPL-3.0 license",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
